add header logo

--- a/templates/home-header.html
+++ b/templates/home-header.html
@@ -1,9 +1,9 @@
 <header class="custom-header" id="main-header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-none">
     <div class="container">
-      <a class="navbar-brand font-weight-bold" href="./index.html"
-        >JadiPintar</a
-      >
+      <a class="navbar-brand font-weight-bold" href="./index.html"></a>
+        <img src="../assets/logo-svg.svg" width="140" />
+      </a>
       <button
         class="navbar-toggler border-0"
         type="button"
