--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,9 @@
 <header class="custom-header">
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container">
-      <a class="navbar-brand font-weight-bold text-dark" href="./index.html"
-        >JadiPintar</a
-      >
+      <a class="navbar-brand font-weight-bold text-dark" href="./index.html">
+        <img src="../assets/logo-svg.svg" width="140" />
+      </a>
       <button
         class="navbar-toggler border-0"
         type="button"
