--- a/css/main.css
+++ b/css/main.css
@@ -7221,6 +7221,16 @@ a.text-dark:hover, a.text-dark:focus {
         .custom-header .input-container i {
           left: 35px; } }
 
+#member-second-nav .navbar-nav .active::after {
+  content: "";
+  display: block;
+  border-bottom: 5px solid #f5841f;
+  width: 100%;
+  margin: auto;
+  padding-bottom: 5px;
+  margin-bottom: -8px;
+  transition: 0.2s; }
+
 .footer-bg {
   background: url(../../assets/footer-bg.jpg);
   background-size: cover; }
@@ -7364,3 +7374,6 @@ ul {
 
 .section-class {
   margin: 7em 0em; }
+
+.drop-shadow {
+  box-shadow: 0px 0px 50px rgba(207, 207, 207, 0.6); }
