--- a/templates/header.html
+++ b/templates/header.html
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link text-dark" href="#"
+            <a class="nav-link text-dark" href="teachers.html"
               >List Teachers <span class="sr-only">(current)</span></a
             >
           </li>
