--- a/templates/home-header.html
+++ b/templates/home-header.html
@@ -22,7 +22,7 @@
       >
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="teachers.html"
               >List Teachers <span class="sr-only">(current)</span></a
             >
           </li>
