--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,9 @@
 .text-warning-hover:hover {
   color: #f5841f !important; }
 
+.bg-gray-custom {
+  background: #ebebeb; }
+
 /* lato-regular - latin */
 @font-face {
   font-family: "Lato";
@@ -7246,6 +7249,83 @@ a.text-dark:hover, a.text-dark:focus {
   .footer-bg .call-to-action {
     padding: 7em 0em; }
 
+#sidebar {
+  min-width: 300px;
+  max-width: 300px;
+  min-height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  z-index: 999;
+  background: #484465;
+  color: #fff;
+  transition: all 0.3s;
+  margin-left: -300px;
+  display: none; }
+
+#sidebar.active {
+  margin-left: 0px; }
+
+@media (min-width: 768px) {
+  #sidebar {
+    display: block; }
+  #sidebar.active {
+    margin-left: 0; } }
+
+#sidebar ul.components {
+  padding: 20px 0;
+  border-bottom: 1px solid rgba(72, 68, 101, 0.8); }
+
+.logout-wrapper {
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 30px 15px;
+  position: relative;
+  bottom: -350px; }
+  .logout-wrapper a {
+    padding: 10px 20px;
+    font-size: 1.1em;
+    color: white; }
+
+#sidebar ul p {
+  color: #fff;
+  padding: 10px; }
+
+#sidebar ul li {
+  padding: 10px 15px; }
+
+#sidebar ul li a {
+  padding: 10px 20px;
+  font-size: 1.1em;
+  display: block;
+  color: #fff;
+  text-decoration: none; }
+
+#sidebar ul li a:hover {
+  color: white;
+  background: #585479;
+  border-radius: 30px; }
+
+#sidebar ul li.active > a,
+a[aria-expanded="true"] {
+  border-radius: 30px;
+  color: #fff;
+  background: #585479; }
+
+ul ul a {
+  font-size: 0.9em !important;
+  padding-left: 30px !important;
+  background: #484465; }
+
+.sidebar-content {
+  margin-top: 6em;
+  transition: all 0.3s;
+  margin-left: 20px;
+  max-width: 1000px; }
+
+#sidebar.active ~ .sidebar-content {
+  margin-left: 330px; }
+
 .nilai-card {
   margin-left: auto;
   margin-right: auto;
@@ -7354,13 +7434,137 @@ a.text-dark:hover, a.text-dark:focus {
     .search-form-home button:focus, .search-form-home button:active {
       outline: none; }
 
+.scheduler-component .schedule-table {
+  width: 100%; }
+  .scheduler-component .schedule-table tbody td {
+    border: 1px solid rgba(131, 131, 131, 0.3);
+    height: 40px; }
+  .scheduler-component .schedule-table .availability {
+    background: white;
+    padding: 0px; }
+    .scheduler-component .schedule-table .availability .availability-btn {
+      width: 100%;
+      padding: 0px;
+      margin: 0px !important;
+      border: none;
+      display: block;
+      background: white;
+      height: 100%; }
+
+.scheduler-component .days .day {
+  margin: 10px 0px; }
+  .scheduler-component .days .day p {
+    text-align: center !important; }
+
+.has-availability {
+  background: #7ec937; }
+
+.your-book {
+  background: #cff1c2; }
+
+.no-availability {
+  background: white; }
+
+.booked {
+  background: #d5d5d5; }
+
+.circle-book {
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
+  border-radius: 50%;
+  display: inline-block; }
+
+.circle-book.no-availability {
+  border: 1px solid #838383; }
+
 .about-img-wrapper {
   max-height: 270px;
   border-radius: 10px;
   overflow: hidden; }
 
+.teacher-video-thumbnail {
+  position: relative;
+  cursor: pointer; }
+  .teacher-video-thumbnail .overlay {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.3); }
+
+.teacher-video-content {
+  width: 100%; }
+
+.btn-play {
+  background: none;
+  border: none;
+  transition: 0.4s ease;
+  max-width: 40px; }
+  @media (min-width: 768px) {
+    .btn-play {
+      max-width: 60px; } }
+  .btn-play:active {
+    transform: scale(1.3);
+    outline: none; }
+  .btn-play:target, .btn-play:focus, .btn-play:active {
+    outline: none; }
+
+.teacher-profile__img {
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50%;
+  overflow: hidden; }
+  .teacher-profile__img img {
+    width: 100%; }
+
+.teacher-profile .status-circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 10px; }
+
+.teacher-about .read-more-link {
+  cursor: pointer; }
+
+.lesson-comp {
+  width: 100%;
+  margin: 2em auto;
+  padding: 1.3em 2em;
+  border: 1px solid rgba(131, 131, 131, 0.2); }
+  @media (min-width: 480px) {
+    .lesson-comp {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; } }
+  .lesson-comp .lesson-separator {
+    display: block;
+    width: 30px;
+    height: 3px;
+    background: #838383; }
+  @media (min-width: 992px) {
+    .lesson-comp {
+      width: 90%; } }
+
+.teacher-photo-wrapper {
+  position: relative;
+  max-width: 200px; }
+  .teacher-photo-wrapper .overlay {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.5);
+    height: 100%;
+    width: 100%; }
+  .teacher-photo-wrapper img {
+    width: 100%; }
+
 body {
-  font-family: "Lato", sans-serif; }
+  font-family: "Lato", sans-serif;
+  overflow-x: hidden; }
 
 * {
   box-sizing: border-box; }
@@ -7373,6 +7577,9 @@ body {
 
 .mt-7 {
   margin-top: 7em; }
+
+.mb-7 {
+  margin-bottom: 7em; }
 
 .mt-8 {
   margin-top: 8em; }
@@ -7389,3 +7596,6 @@ ul {
 
 .drop-shadow {
   box-shadow: 0px 0px 50px rgba(207, 207, 207, 0.6); }
+
+.tooltip[aria-hidden="false"] {
+  opacity: 1; }
