--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,18 +15,23 @@ $theme-colors: (
 // Layouts
 @import "./layout/navbar";
 @import "./layout/footer";
+@import "./layout/sidebar";
 
 // components
 @import "./components/cards";
 @import "./components/modal";
 @import "./components/jumbotron";
 @import "./components/forms";
+@import "./components/scheduler";
 
 // Pages
 @import "./pages/about";
+@import "./pages/teacher-single";
+@import "./pages/dashboard";
 
 body {
   font-family: "Lato", sans-serif;
+  overflow-x: hidden;
 }
 
 * {
@@ -41,6 +46,9 @@ body {
 }
 .mt-7 {
   margin-top: 7em;
+}
+.mb-7 {
+  margin-bottom: 7em;
 }
 .mt-8 {
   margin-top: 8em;
@@ -59,4 +67,7 @@ ul {
 }
 .drop-shadow {
   box-shadow: 0px 0px 50px rgba($color: #cfcfcf, $alpha: 0.6);
+}
+.tooltip[aria-hidden="false"] {
+  opacity: 1;
 }
