--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,8 +1,9 @@
 .footer-bg {
   background: url(../../assets/footer-bg.jpg);
   background-size: cover;
+  background-position: center center;
 
   .call-to-action {
-    padding: 7em 0em;
+    padding: 10em 0em;
   }
 }
