--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -1,6 +1,6 @@
 #sidebar {
-  min-width: 300px;
-  max-width: 300px;
+  min-width: 250px;
+  max-width: 250px;
   min-height: 100vh;
   position: fixed;
   top: 0;
@@ -10,7 +10,7 @@
   background: $dark;
   color: #fff;
   transition: all 0.3s;
-  margin-left: -300px;
+  margin-left: -250px;
   display: none;
 }
 
@@ -54,7 +54,7 @@
 
 #sidebar ul li a {
   padding: 10px 20px;
-  font-size: 1.1em;
+  font-size: 0.9em;
   display: block;
   color: #fff;
   text-decoration: none;
@@ -81,9 +81,36 @@ ul ul a {
   margin-top: 6em;
   transition: all 0.3s;
   margin-left: 20px;
-  max-width: 1000px;
+  @include tablet {
+    max-width: 1000px;
+  }
+  @include desktop {
+    max-width: 1300px;
+  }
 }
 
 #sidebar.active ~ .sidebar-content {
-  margin-left: 330px;
+  @include tablet {
+    max-width: 900px;
+  }
+  @include desktop {
+    max-width: 1024px;
+  }
+}
+
+#sidebar.active ~ .sidebar-content {
+  margin-left: 0px;
+
+  @include tablet {
+    margin-left: 280px;
+  }
+}
+
+.logout-wrapper {
+  a {
+    font-size: 0.9em;
+    &:hover {
+      font-weight: bold;
+    }
+  }
 }
