--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -9,7 +9,7 @@
     .btn.focus,
     .btn:active.focus,
     .btn.active.focus {
-      outline: none !important;
+      box-shadow: none;
     }
   }
 
