--- a/scss/pages/_dashboard.scss
+++ b/scss/pages/_dashboard.scss
@@ -1,15 +1,29 @@
 .teacher-photo-wrapper {
   position: relative;
 
+  width: 100%;
   max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 
   .overlay {
     position: absolute;
     background: rgba($color: #000000, $alpha: 0.5);
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .upload-btn {
+      color: white;
+      box-shadow: none;
+    }
   }
   img {
     width: 100%;
   }
+}
+
+.teacher-data-text {
+  font-size: 17px;
 }
