--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,6 +28,7 @@ $theme-colors: (
 @import "./pages/about";
 @import "./pages/teacher-single";
 @import "./pages/dashboard";
+@import "./pages/profile";
 
 body {
   font-family: "Lato", sans-serif;
